fix no result alignement

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -645,7 +645,6 @@ span.stack-user{
     font-weight: 400;
     line-height: 28px;
     text-align: center;
-    padding-right: 100px;
 }
 
 a.delete-btn{
